<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
	<string name="play">Play Chess</string>
	<string name="recgame">Recorded Games</string>
	<string name="back">Back</string>
    <string name="playback">Playback Game</string>
    <string name="undobutton">Undo Move</string>
    <string name="aimove">AI Move</string>
    <string name="homebutton">Home</string>
    <string name="draw">Draw</string>
    <string name="resign">Resign</string>
    <string name="redsmove">Red\'s Move</string>
    <string name="bluesmove">Blue\'s Move</string>
    <string name="invalidmove">Invalid move</string>
    
    <!--  For buttons -->
    <string name="savegame">Save Game</string>
    <string name="no">No</string>
    <string name="yesdraw">Draw</string>
    <string name="home">Home</string>
    <string name="nextmove">Next Move</string>
    
    <!-- For Spinner -->
    <string-array name = "sortBy">
        <item >Sort by Date</item>
        <item >Sort by Title</item>
        
    </string-array>
    
</resources>
